# coursework4

./: .env.sample  README.md  pyproject.toml
SendMailService/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
SendMailService/management/commands/: send_mailing.py
SendMailService/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_message_options_and_more.py  0003_alter_mailing_status.py
SendMailService/template/SendMail/: home.html  message_create.html  message_detail.html  user_delete.html
SendMailService/templates/SendMailService/: base.html  home.html  mailing_add.html  mailing_attempt_detail.html  mailing_delete.html  mailing_detail.html  mailing_send.html  mailing_stop.html  message_create.html  message_delete.html  message_detail.html  user_create.html  user_delete.html  user_detail.html  user_register_ban.html  user_register_view.html
SendMailService/templates/SendMailService/includes/: header_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_phone_number.py  0003_alter_customuser_options.py
users/templates/users/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  profile_user.html  register.html  user_password_reset.html  user_password_set_new.html
