[tool.poetry]
name = "courcework4"
version = "0.1.0"
description = ""
authors = ["Mihouk <arbi_14@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
isort = "^6.0.0"
mypy = "^1.15.0"
django = "^5.1.6"
python-dotenv = "^1.0.1"
ipython = "^8.32.0"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
